@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -75,18 +75,18 @@ import org.springframework.util.StringUtils;
  *
  * def reader = new GroovyBeanDefinitionReader(myApplicationContext)
  * reader.beans {
- *     dataSource(BasicDataSource) {                  // <--- invokeMethod
+ *     dataSource(BasicDataSource) {                  // &lt;--- invokeMethod
  *         driverClassName = "org.hsqldb.jdbcDriver"
  *         url = "jdbc:hsqldb:mem:grailsDB"
- *         username = "sa"                            // <-- setProperty
+ *         username = "sa"                            // &lt;-- setProperty
  *         password = ""
  *         settings = [mynew:"setting"]
  *     }
  *     sessionFactory(SessionFactory) {
- *         dataSource = dataSource                    // <-- getProperty for retrieving references
+ *         dataSource = dataSource                    // &lt;-- getProperty for retrieving references
  *     }
  *     myService(MyService) {
- *         nestedBean = { AnotherBean bean ->         // <-- setProperty with closure for nested bean
+ *         nestedBean = { AnotherBean bean -&gt;         // &lt;-- setProperty with closure for nested bean
  *             dataSource = dataSource
  *         }
  *     }
@@ -113,7 +113,7 @@ import org.springframework.util.StringUtils;
  *         dataSource = dataSource
  *     }
  *     myService(MyService) {
- *         nestedBean = { AnotherBean bean ->
+ *         nestedBean = { AnotherBean bean -&gt;
  *             dataSource = dataSource
  *         }
  *     }
@@ -232,7 +232,6 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 	 * @return the number of bean definitions found
 	 * @throws BeanDefinitionStoreException in case of loading or parsing errors
 	 */
-	@SuppressWarnings("rawtypes")
 	public int loadBeanDefinitions(EncodedResource encodedResource) throws BeanDefinitionStoreException {
 		// Check for XML files and redirect them to the "standard" XmlBeanDefinitionReader
 		String filename = encodedResource.getResource().getFilename();
@@ -245,10 +244,10 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 		}
 
 		@SuppressWarnings("serial")
-		Closure beans = new Closure(this) {
+		Closure<Object> beans = new Closure<>(this) {
 			@Override
 			public Object call(Object... args) {
-				invokeBeanDefiningClosure((Closure) args[0]);
+				invokeBeanDefiningClosure((Closure<?>) args[0]);
 				return null;
 			}
 		};
@@ -290,8 +289,7 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 	 * @param closure the block or closure
 	 * @return this {@code GroovyBeanDefinitionReader} instance
 	 */
-	@SuppressWarnings("rawtypes")
-	public GroovyBeanDefinitionReader beans(Closure closure) {
+	public GroovyBeanDefinitionReader beans(Closure<?> closure) {
 		return invokeBeanDefiningClosure(closure);
 	}
 
@@ -312,29 +310,25 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 	 * @param args the constructors arguments and closure configurer
 	 * @return the bean definition
 	 */
-	@SuppressWarnings("rawtypes")
 	public AbstractBeanDefinition bean(Class<?> type, Object...args) {
 		GroovyBeanDefinitionWrapper current = this.currentBeanDefinition;
 		try {
-			Closure callable = null;
-			Collection constructorArgs = null;
+			Closure<?> callable = null;
+			Collection<Object> constructorArgs = null;
 			if (!ObjectUtils.isEmpty(args)) {
 				int index = args.length;
 				Object lastArg = args[index - 1];
-				if (lastArg instanceof Closure) {
-					callable = (Closure) lastArg;
+				if (lastArg instanceof Closure<?>) {
+					callable = (Closure<?>) lastArg;
 					index--;
 				}
-				if (index > -1) {
-					constructorArgs = resolveConstructorArguments(args, 0, index);
-				}
+				constructorArgs = resolveConstructorArguments(args, 0, index);
 			}
 			this.currentBeanDefinition = new GroovyBeanDefinitionWrapper(null, type, constructorArgs);
 			if (callable != null) {
 				callable.call(this.currentBeanDefinition);
 			}
 			return this.currentBeanDefinition.getBeanDefinition();
-
 		}
 		finally {
 			this.currentBeanDefinition = current;
@@ -381,26 +375,25 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 	 * takes a class argument.
 	 */
 	@Override
-	@SuppressWarnings("rawtypes")
 	public Object invokeMethod(String name, Object arg) {
 		Object[] args = (Object[])arg;
-		if ("beans".equals(name) && args.length == 1 && args[0] instanceof Closure) {
-			return beans((Closure) args[0]);
+		if ("beans".equals(name) && args.length == 1 && args[0] instanceof Closure<?> closure) {
+			return beans(closure);
 		}
 		else if ("ref".equals(name)) {
 			String refName;
 			if (args[0] == null) {
 				throw new IllegalArgumentException("Argument to ref() is not a valid bean or was not found");
 			}
-			if (args[0] instanceof RuntimeBeanReference) {
-				refName = ((RuntimeBeanReference) args[0]).getBeanName();
+			if (args[0] instanceof RuntimeBeanReference runtimeBeanReference) {
+				refName = runtimeBeanReference.getBeanName();
 			}
 			else {
 				refName = args[0].toString();
 			}
 			boolean parentRef = false;
-			if (args.length > 1 && args[1] instanceof Boolean) {
-				parentRef = (Boolean) args[1];
+			if (args.length > 1 && args[1] instanceof Boolean bool) {
+				parentRef = bool;
 			}
 			return new RuntimeBeanReference(refName, parentRef);
 		}
@@ -435,14 +428,13 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 		return false;
 	}
 
-	@SuppressWarnings("rawtypes")
 	private void finalizeDeferredProperties() {
 		for (DeferredProperty dp : this.deferredProperties.values()) {
-			if (dp.value instanceof List) {
-				dp.value = manageListIfNecessary((List) dp.value);
+			if (dp.value instanceof List<?> list) {
+				dp.value = manageListIfNecessary(list);
 			}
-			else if (dp.value instanceof Map) {
-				dp.value = manageMapIfNecessary((Map) dp.value);
+			else if (dp.value instanceof Map<?, ?> map) {
+				dp.value = manageMapIfNecessary(map);
 			}
 			dp.apply();
 		}
@@ -454,8 +446,7 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 	 * @param callable the closure argument
 	 * @return this {@code GroovyBeanDefinitionReader} instance
 	 */
-	@SuppressWarnings("rawtypes")
-	protected GroovyBeanDefinitionReader invokeBeanDefiningClosure(Closure callable) {
+	protected GroovyBeanDefinitionReader invokeBeanDefiningClosure(Closure<?> callable) {
 		callable.setDelegate(this);
 		callable.call();
 		finalizeDeferredProperties();
@@ -469,11 +460,9 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 	 * argument is sometimes a closure. All the arguments in between are constructor arguments.
 	 * @return the bean definition wrapper
 	 */
-	@SuppressWarnings("rawtypes")
 	private GroovyBeanDefinitionWrapper invokeBeanDefiningMethod(String beanName, Object[] args) {
 		boolean hasClosureArgument = (args[args.length - 1] instanceof Closure);
-		if (args[0] instanceof Class) {
-			Class<?> beanClass = (Class<?>) args[0];
+		if (args[0] instanceof Class<?> beanClass) {
 			if (hasClosureArgument) {
 				if (args.length - 1 != 1) {
 					this.currentBeanDefinition = new GroovyBeanDefinitionWrapper(
@@ -488,26 +477,26 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 						beanName, beanClass, resolveConstructorArguments(args, 1, args.length));
 			}
 		}
-		else if (args[0] instanceof RuntimeBeanReference) {
+		else if (args[0] instanceof RuntimeBeanReference runtimeBeanReference) {
 			this.currentBeanDefinition = new GroovyBeanDefinitionWrapper(beanName);
-			this.currentBeanDefinition.getBeanDefinition().setFactoryBeanName(((RuntimeBeanReference) args[0]).getBeanName());
+			this.currentBeanDefinition.getBeanDefinition().setFactoryBeanName(runtimeBeanReference.getBeanName());
 		}
-		else if (args[0] instanceof Map) {
+		else if (args[0] instanceof Map<?, ?> namedArgs) {
 			// named constructor arguments
-			if (args.length > 1 && args[1] instanceof Class) {
-				List<Object> constructorArgs = resolveConstructorArguments(args, 2, hasClosureArgument ? args.length - 1 : args.length);
-				this.currentBeanDefinition = new GroovyBeanDefinitionWrapper(beanName, (Class<?>) args[1], constructorArgs);
-				Map namedArgs = (Map) args[0];
-				for (Object o : namedArgs.keySet()) {
-					String propName = (String) o;
-					setProperty(propName, namedArgs.get(propName));
+			if (args.length > 1 && args[1] instanceof Class<?> clazz) {
+				List<Object> constructorArgs =
+						resolveConstructorArguments(args, 2, hasClosureArgument ? args.length - 1 : args.length);
+				this.currentBeanDefinition = new GroovyBeanDefinitionWrapper(beanName, clazz, constructorArgs);
+				for (Map.Entry<?, ?> entity : namedArgs.entrySet()) {
+					String propName = (String) entity.getKey();
+					setProperty(propName, entity.getValue());
 				}
 			}
 			// factory method syntax
 			else {
 				this.currentBeanDefinition = new GroovyBeanDefinitionWrapper(beanName);
 				// First arg is the map containing factoryBean : factoryMethod
-				Map.Entry factoryBeanEntry = (Map.Entry) ((Map) args[0]).entrySet().iterator().next();
+				Map.Entry<?, ?> factoryBeanEntry = namedArgs.entrySet().iterator().next();
 				// If we have a closure body, that will be the last argument.
 				// In between are the constructor args
 				int constructorArgsTest = (hasClosureArgument ? 2 : 1);
@@ -531,12 +520,13 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 			this.currentBeanDefinition.getBeanDefinition().setAbstract(true);
 		}
 		else {
-			List constructorArgs = resolveConstructorArguments(args, 0, hasClosureArgument ? args.length - 1 : args.length);
+			List<Object> constructorArgs =
+					resolveConstructorArguments(args, 0, hasClosureArgument ? args.length - 1 : args.length);
 			this.currentBeanDefinition = new GroovyBeanDefinitionWrapper(beanName, null, constructorArgs);
 		}
 
 		if (hasClosureArgument) {
-			Closure callable = (Closure) args[args.length - 1];
+			Closure<?> callable = (Closure<?>) args[args.length - 1];
 			callable.setDelegate(this);
 			callable.setResolveStrategy(Closure.DELEGATE_FIRST);
 			callable.call(this.currentBeanDefinition);
@@ -549,21 +539,20 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 		return beanDefinition;
 	}
 
-	@SuppressWarnings("rawtypes")
 	protected List<Object> resolveConstructorArguments(Object[] args, int start, int end) {
 		Object[] constructorArgs = Arrays.copyOfRange(args, start, end);
 		for (int i = 0; i < constructorArgs.length; i++) {
 			if (constructorArgs[i] instanceof GString) {
 				constructorArgs[i] = constructorArgs[i].toString();
 			}
-			else if (constructorArgs[i] instanceof List) {
-				constructorArgs[i] = manageListIfNecessary((List) constructorArgs[i]);
+			else if (constructorArgs[i] instanceof List<?> list) {
+				constructorArgs[i] = manageListIfNecessary(list);
 			}
-			else if (constructorArgs[i] instanceof Map){
-				constructorArgs[i] = manageMapIfNecessary((Map) constructorArgs[i]);
+			else if (constructorArgs[i] instanceof Map<?, ?> map){
+				constructorArgs[i] = manageMapIfNecessary(map);
 			}
 		}
-		return Arrays.asList(constructorArgs);
+		return List.of(constructorArgs);
 	}
 
 	/**
@@ -621,7 +610,6 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 		}
 	}
 
-	@SuppressWarnings("rawtypes")
 	protected void applyPropertyToBeanDefinition(String name, Object value) {
 		if (value instanceof GString) {
 			value = value.toString();
@@ -629,10 +617,9 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 		if (addDeferredProperty(name, value)) {
 			return;
 		}
-		else if (value instanceof Closure) {
+		else if (value instanceof Closure<?> callable) {
 			GroovyBeanDefinitionWrapper current = this.currentBeanDefinition;
 			try {
-				Closure callable = (Closure) value;
 				Class<?> parameterType = callable.getParameterTypes()[0];
 				if (Object.class == parameterType) {
 					this.currentBeanDefinition = new GroovyBeanDefinitionWrapper("");
@@ -833,8 +820,8 @@ public class GroovyBeanDefinitionReader extends AbstractBeanDefinitionReader imp
 				return retVal;
 			}
 
-			@SuppressWarnings({ "rawtypes", "unused" })
-			public boolean addAll(Collection values) {
+			@SuppressWarnings("unused")
+			public boolean addAll(Collection<?> values) {
 				boolean retVal = (Boolean) InvokerHelper.invokeMethod(this.propertyValue, "addAll", values);
 				for (Object value : values) {
 					updateDeferredProperties(value);
