@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,14 +16,12 @@
 
 package org.springframework.beans;
 
-import java.net.MalformedURLException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
@@ -33,11 +31,11 @@ import org.junit.jupiter.api.Test;
 
 import org.springframework.beans.propertyeditors.CustomNumberEditor;
 import org.springframework.beans.propertyeditors.StringTrimmerEditor;
+import org.springframework.beans.testfixture.beans.GenericBean;
+import org.springframework.beans.testfixture.beans.GenericIntegerBean;
+import org.springframework.beans.testfixture.beans.GenericSetOfIntegerBean;
+import org.springframework.beans.testfixture.beans.TestBean;
 import org.springframework.core.io.UrlResource;
-import org.springframework.tests.sample.beans.GenericBean;
-import org.springframework.tests.sample.beans.GenericIntegerBean;
-import org.springframework.tests.sample.beans.GenericSetOfIntegerBean;
-import org.springframework.tests.sample.beans.TestBean;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
@@ -47,22 +45,22 @@ import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
  * @author Chris Beams
  * @since 18.01.2006
  */
-public class BeanWrapperGenericsTests {
+class BeanWrapperGenericsTests {
 
 	@Test
-	public void testGenericSet() {
+	void testGenericSet() {
 		GenericBean<?> gb = new GenericBean<>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		Set<String> input = new HashSet<>();
 		input.add("4");
 		input.add("5");
 		bw.setPropertyValue("integerSet", input);
-		assertThat(gb.getIntegerSet().contains(new Integer(4))).isTrue();
-		assertThat(gb.getIntegerSet().contains(new Integer(5))).isTrue();
+		assertThat(gb.getIntegerSet().contains(4)).isTrue();
+		assertThat(gb.getIntegerSet().contains(5)).isTrue();
 	}
 
 	@Test
-	public void testGenericLowerBoundedSet() {
+	void testGenericLowerBoundedSet() {
 		GenericBean<?> gb = new GenericBean<>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.registerCustomEditor(Number.class, new CustomNumberEditor(Integer.class, true));
@@ -70,12 +68,12 @@ public class BeanWrapperGenericsTests {
 		input.add("4");
 		input.add("5");
 		bw.setPropertyValue("numberSet", input);
-		assertThat(gb.getNumberSet().contains(new Integer(4))).isTrue();
-		assertThat(gb.getNumberSet().contains(new Integer(5))).isTrue();
+		assertThat(gb.getNumberSet().contains(4)).isTrue();
+		assertThat(gb.getNumberSet().contains(5)).isTrue();
 	}
 
 	@Test
-	public void testGenericSetWithConversionFailure() {
+	void testGenericSetWithConversionFailure() {
 		GenericBean<?> gb = new GenericBean<>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		Set<TestBean> input = new HashSet<>();
@@ -86,7 +84,7 @@ public class BeanWrapperGenericsTests {
 	}
 
 	@Test
-	public void testGenericList() throws MalformedURLException {
+	void testGenericList() throws Exception {
 		GenericBean<?> gb = new GenericBean<>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		List<String> input = new ArrayList<>();
@@ -98,7 +96,7 @@ public class BeanWrapperGenericsTests {
 	}
 
 	@Test
-	public void testGenericListElement() throws MalformedURLException {
+	void testGenericListElement() throws Exception {
 		GenericBean<?> gb = new GenericBean<>();
 		gb.setResourceList(new ArrayList<>());
 		BeanWrapper bw = new BeanWrapperImpl(gb);
@@ -107,119 +105,116 @@ public class BeanWrapperGenericsTests {
 	}
 
 	@Test
-	public void testGenericMap() {
+	void testGenericMap() {
 		GenericBean<?> gb = new GenericBean<>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		Map<String, String> input = new HashMap<>();
 		input.put("4", "5");
 		input.put("6", "7");
 		bw.setPropertyValue("shortMap", input);
-		assertThat(gb.getShortMap().get(new Short("4"))).isEqualTo(new Integer(5));
-		assertThat(gb.getShortMap().get(new Short("6"))).isEqualTo(new Integer(7));
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
 	}
 
 	@Test
-	public void testGenericMapElement() {
+	void testGenericMapElement() {
 		GenericBean<?> gb = new GenericBean<>();
 		gb.setShortMap(new HashMap<>());
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("shortMap[4]", "5");
-		assertThat(bw.getPropertyValue("shortMap[4]")).isEqualTo(new Integer(5));
-		assertThat(gb.getShortMap().get(new Short("4"))).isEqualTo(new Integer(5));
+		assertThat(bw.getPropertyValue("shortMap[4]")).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
 	}
 
 	@Test
-	public void testGenericMapWithKeyType() {
+	void testGenericMapWithKeyType() {
 		GenericBean<?> gb = new GenericBean<>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		Map<String, String> input = new HashMap<>();
 		input.put("4", "5");
 		input.put("6", "7");
 		bw.setPropertyValue("longMap", input);
-		assertThat(gb.getLongMap().get(new Long("4"))).isEqualTo("5");
-		assertThat(gb.getLongMap().get(new Long("6"))).isEqualTo("7");
+		assertThat(gb.getLongMap().get(4L)).isEqualTo("5");
+		assertThat(gb.getLongMap().get(6L)).isEqualTo("7");
 	}
 
 	@Test
-	public void testGenericMapElementWithKeyType() {
+	void testGenericMapElementWithKeyType() {
 		GenericBean<?> gb = new GenericBean<>();
 		gb.setLongMap(new HashMap<Long, Integer>());
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("longMap[4]", "5");
-		assertThat(gb.getLongMap().get(new Long("4"))).isEqualTo("5");
+		assertThat(gb.getLongMap().get(Long.valueOf("4"))).isEqualTo("5");
 		assertThat(bw.getPropertyValue("longMap[4]")).isEqualTo("5");
 	}
 
 	@Test
-	public void testGenericMapWithCollectionValue() {
+	void testGenericMapWithCollectionValue() {
 		GenericBean<?> gb = new GenericBean<>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.registerCustomEditor(Number.class, new CustomNumberEditor(Integer.class, false));
 		Map<String, Collection<?>> input = new HashMap<>();
 		HashSet<Integer> value1 = new HashSet<>();
-		value1.add(new Integer(1));
+		value1.add(1);
 		input.put("1", value1);
 		ArrayList<Boolean> value2 = new ArrayList<>();
 		value2.add(Boolean.TRUE);
 		input.put("2", value2);
 		bw.setPropertyValue("collectionMap", input);
-		boolean condition1 = gb.getCollectionMap().get(new Integer(1)) instanceof HashSet;
-		assertThat(condition1).isTrue();
-		boolean condition = gb.getCollectionMap().get(new Integer(2)) instanceof ArrayList;
-		assertThat(condition).isTrue();
+		assertThat(gb.getCollectionMap().get(1) instanceof HashSet).isTrue();
+		assertThat(gb.getCollectionMap().get(2) instanceof ArrayList).isTrue();
 	}
 
 	@Test
-	public void testGenericMapElementWithCollectionValue() {
+	void testGenericMapElementWithCollectionValue() {
 		GenericBean<?> gb = new GenericBean<>();
 		gb.setCollectionMap(new HashMap<>());
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.registerCustomEditor(Number.class, new CustomNumberEditor(Integer.class, false));
 		HashSet<Integer> value1 = new HashSet<>();
-		value1.add(new Integer(1));
+		value1.add(1);
 		bw.setPropertyValue("collectionMap[1]", value1);
-		boolean condition = gb.getCollectionMap().get(new Integer(1)) instanceof HashSet;
-		assertThat(condition).isTrue();
+		assertThat(gb.getCollectionMap().get(1) instanceof HashSet).isTrue();
 	}
 
 	@Test
-	public void testGenericMapFromProperties() {
+	void testGenericMapFromProperties() {
 		GenericBean<?> gb = new GenericBean<>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		Properties input = new Properties();
 		input.setProperty("4", "5");
 		input.setProperty("6", "7");
 		bw.setPropertyValue("shortMap", input);
-		assertThat(gb.getShortMap().get(new Short("4"))).isEqualTo(new Integer(5));
-		assertThat(gb.getShortMap().get(new Short("6"))).isEqualTo(new Integer(7));
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
 	}
 
 	@Test
-	public void testGenericListOfLists() throws MalformedURLException {
+	void testGenericListOfLists() {
 		GenericBean<String> gb = new GenericBean<>();
-		List<List<Integer>> list = new LinkedList<>();
-		list.add(new LinkedList<>());
+		List<List<Integer>> list = new ArrayList<>();
+		list.add(new ArrayList<>());
 		gb.setListOfLists(list);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
-		bw.setPropertyValue("listOfLists[0][0]", new Integer(5));
-		assertThat(bw.getPropertyValue("listOfLists[0][0]")).isEqualTo(new Integer(5));
-		assertThat(gb.getListOfLists().get(0).get(0)).isEqualTo(new Integer(5));
+		bw.setPropertyValue("listOfLists[0][0]", 5);
+		assertThat(bw.getPropertyValue("listOfLists[0][0]")).isEqualTo(5);
+		assertThat(gb.getListOfLists().get(0).get(0)).isEqualTo(5);
 	}
 
 	@Test
-	public void testGenericListOfListsWithElementConversion() throws MalformedURLException {
+	void testGenericListOfListsWithElementConversion() {
 		GenericBean<String> gb = new GenericBean<>();
-		List<List<Integer>> list = new LinkedList<>();
-		list.add(new LinkedList<>());
+		List<List<Integer>> list = new ArrayList<>();
+		list.add(new ArrayList<>());
 		gb.setListOfLists(list);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("listOfLists[0][0]", "5");
-		assertThat(bw.getPropertyValue("listOfLists[0][0]")).isEqualTo(new Integer(5));
-		assertThat(gb.getListOfLists().get(0).get(0)).isEqualTo(new Integer(5));
+		assertThat(bw.getPropertyValue("listOfLists[0][0]")).isEqualTo(5);
+		assertThat(gb.getListOfLists().get(0).get(0)).isEqualTo(5);
 	}
 
 	@Test
-	public void testGenericListOfArrays() throws MalformedURLException {
+	void testGenericListOfArrays() {
 		GenericBean<String> gb = new GenericBean<>();
 		ArrayList<String[]> list = new ArrayList<>();
 		list.add(new String[] {"str1", "str2"});
@@ -231,7 +226,7 @@ public class BeanWrapperGenericsTests {
 	}
 
 	@Test
-	public void testGenericListOfArraysWithElementConversion() throws MalformedURLException {
+	void testGenericListOfArraysWithElementConversion() {
 		GenericBean<String> gb = new GenericBean<>();
 		ArrayList<String[]> list = new ArrayList<>();
 		list.add(new String[] {"str1", "str2"});
@@ -244,79 +239,79 @@ public class BeanWrapperGenericsTests {
 	}
 
 	@Test
-	public void testGenericListOfMaps() throws MalformedURLException {
+	void testGenericListOfMaps() {
 		GenericBean<String> gb = new GenericBean<>();
-		List<Map<Integer, Long>> list = new LinkedList<>();
+		List<Map<Integer, Long>> list = new ArrayList<>();
 		list.add(new HashMap<>());
 		gb.setListOfMaps(list);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
-		bw.setPropertyValue("listOfMaps[0][10]", new Long(5));
-		assertThat(bw.getPropertyValue("listOfMaps[0][10]")).isEqualTo(new Long(5));
-		assertThat(gb.getListOfMaps().get(0).get(10)).isEqualTo(new Long(5));
+		bw.setPropertyValue("listOfMaps[0][10]", 5L);
+		assertThat(bw.getPropertyValue("listOfMaps[0][10]")).isEqualTo(5L);
+		assertThat(gb.getListOfMaps().get(0).get(10)).isEqualTo(Long.valueOf(5));
 	}
 
 	@Test
-	public void testGenericListOfMapsWithElementConversion() throws MalformedURLException {
+	void testGenericListOfMapsWithElementConversion() {
 		GenericBean<String> gb = new GenericBean<>();
-		List<Map<Integer, Long>> list = new LinkedList<>();
+		List<Map<Integer, Long>> list = new ArrayList<>();
 		list.add(new HashMap<>());
 		gb.setListOfMaps(list);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("listOfMaps[0][10]", "5");
-		assertThat(bw.getPropertyValue("listOfMaps[0][10]")).isEqualTo(new Long(5));
-		assertThat(gb.getListOfMaps().get(0).get(10)).isEqualTo(new Long(5));
+		assertThat(bw.getPropertyValue("listOfMaps[0][10]")).isEqualTo(5L);
+		assertThat(gb.getListOfMaps().get(0).get(10)).isEqualTo(Long.valueOf(5));
 	}
 
 	@Test
-	public void testGenericMapOfMaps() throws MalformedURLException {
+	void testGenericMapOfMaps() {
 		GenericBean<String> gb = new GenericBean<>();
 		Map<String, Map<Integer, Long>> map = new HashMap<>();
 		map.put("mykey", new HashMap<>());
 		gb.setMapOfMaps(map);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
-		bw.setPropertyValue("mapOfMaps[mykey][10]", new Long(5));
-		assertThat(bw.getPropertyValue("mapOfMaps[mykey][10]")).isEqualTo(new Long(5));
-		assertThat(gb.getMapOfMaps().get("mykey").get(10)).isEqualTo(new Long(5));
+		bw.setPropertyValue("mapOfMaps[mykey][10]", 5L);
+		assertThat(bw.getPropertyValue("mapOfMaps[mykey][10]")).isEqualTo(5L);
+		assertThat(gb.getMapOfMaps().get("mykey").get(10)).isEqualTo(Long.valueOf(5));
 	}
 
 	@Test
-	public void testGenericMapOfMapsWithElementConversion() throws MalformedURLException {
+	void testGenericMapOfMapsWithElementConversion() {
 		GenericBean<String> gb = new GenericBean<>();
 		Map<String, Map<Integer, Long>> map = new HashMap<>();
 		map.put("mykey", new HashMap<>());
 		gb.setMapOfMaps(map);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("mapOfMaps[mykey][10]", "5");
-		assertThat(bw.getPropertyValue("mapOfMaps[mykey][10]")).isEqualTo(new Long(5));
-		assertThat(gb.getMapOfMaps().get("mykey").get(10)).isEqualTo(new Long(5));
+		assertThat(bw.getPropertyValue("mapOfMaps[mykey][10]")).isEqualTo(Long.valueOf(5));
+		assertThat(gb.getMapOfMaps().get("mykey").get(10)).isEqualTo(Long.valueOf(5));
 	}
 
 	@Test
-	public void testGenericMapOfLists() throws MalformedURLException {
+	void testGenericMapOfLists() {
 		GenericBean<String> gb = new GenericBean<>();
 		Map<Integer, List<Integer>> map = new HashMap<>();
-		map.put(new Integer(1), new LinkedList<>());
+		map.put(1, new ArrayList<>());
 		gb.setMapOfLists(map);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
-		bw.setPropertyValue("mapOfLists[1][0]", new Integer(5));
-		assertThat(bw.getPropertyValue("mapOfLists[1][0]")).isEqualTo(new Integer(5));
-		assertThat(gb.getMapOfLists().get(new Integer(1)).get(0)).isEqualTo(new Integer(5));
+		bw.setPropertyValue("mapOfLists[1][0]", 5);
+		assertThat(bw.getPropertyValue("mapOfLists[1][0]")).isEqualTo(5);
+		assertThat(gb.getMapOfLists().get(1).get(0)).isEqualTo(5);
 	}
 
 	@Test
-	public void testGenericMapOfListsWithElementConversion() throws MalformedURLException {
+	void testGenericMapOfListsWithElementConversion() {
 		GenericBean<String> gb = new GenericBean<>();
 		Map<Integer, List<Integer>> map = new HashMap<>();
-		map.put(new Integer(1), new LinkedList<>());
+		map.put(1, new ArrayList<>());
 		gb.setMapOfLists(map);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("mapOfLists[1][0]", "5");
-		assertThat(bw.getPropertyValue("mapOfLists[1][0]")).isEqualTo(new Integer(5));
-		assertThat(gb.getMapOfLists().get(new Integer(1)).get(0)).isEqualTo(new Integer(5));
+		assertThat(bw.getPropertyValue("mapOfLists[1][0]")).isEqualTo(5);
+		assertThat(gb.getMapOfLists().get(1).get(0)).isEqualTo(5);
 	}
 
 	@Test
-	public void testGenericTypeNestingMapOfInteger() throws Exception {
+	void testGenericTypeNestingMapOfInteger() {
 		Map<String, String> map = new HashMap<>();
 		map.put("testKey", "100");
 
@@ -325,14 +320,13 @@ public class BeanWrapperGenericsTests {
 		bw.setPropertyValue("mapOfInteger", map);
 
 		Object obj = gb.getMapOfInteger().get("testKey");
-		boolean condition = obj instanceof Integer;
-		assertThat(condition).isTrue();
+		assertThat(obj instanceof Integer).isTrue();
 	}
 
 	@Test
-	public void testGenericTypeNestingMapOfListOfInteger() throws Exception {
+	void testGenericTypeNestingMapOfListOfInteger() {
 		Map<String, List<String>> map = new HashMap<>();
-		List<String> list = Arrays.asList(new String[] {"1", "2", "3"});
+		List<String> list = Arrays.asList("1", "2", "3");
 		map.put("testKey", list);
 
 		NestedGenericCollectionBean gb = new NestedGenericCollectionBean();
@@ -340,14 +334,13 @@ public class BeanWrapperGenericsTests {
 		bw.setPropertyValue("mapOfListOfInteger", map);
 
 		Object obj = gb.getMapOfListOfInteger().get("testKey").get(0);
-		boolean condition = obj instanceof Integer;
-		assertThat(condition).isTrue();
+		assertThat(obj instanceof Integer).isTrue();
 		assertThat(((Integer) obj).intValue()).isEqualTo(1);
 	}
 
 	@Test
-	public void testGenericTypeNestingListOfMapOfInteger() throws Exception {
-		List<Map<String, String>> list = new LinkedList<>();
+	void testGenericTypeNestingListOfMapOfInteger() {
+		List<Map<String, String>> list = new ArrayList<>();
 		Map<String, String> map = new HashMap<>();
 		map.put("testKey", "5");
 		list.add(map);
@@ -357,15 +350,14 @@ public class BeanWrapperGenericsTests {
 		bw.setPropertyValue("listOfMapOfInteger", list);
 
 		Object obj = gb.getListOfMapOfInteger().get(0).get("testKey");
-		boolean condition = obj instanceof Integer;
-		assertThat(condition).isTrue();
+		assertThat(obj instanceof Integer).isTrue();
 		assertThat(((Integer) obj).intValue()).isEqualTo(5);
 	}
 
 	@Test
-	public void testGenericTypeNestingMapOfListOfListOfInteger() throws Exception {
+	void testGenericTypeNestingMapOfListOfListOfInteger() {
 		Map<String, List<List<String>>> map = new HashMap<>();
-		List<String> list = Arrays.asList(new String[] {"1", "2", "3"});
+		List<String> list = Arrays.asList("1", "2", "3");
 		map.put("testKey", Collections.singletonList(list));
 
 		NestedGenericCollectionBean gb = new NestedGenericCollectionBean();
@@ -373,17 +365,16 @@ public class BeanWrapperGenericsTests {
 		bw.setPropertyValue("mapOfListOfListOfInteger", map);
 
 		Object obj = gb.getMapOfListOfListOfInteger().get("testKey").get(0).get(0);
-		boolean condition = obj instanceof Integer;
-		assertThat(condition).isTrue();
+		assertThat(obj instanceof Integer).isTrue();
 		assertThat(((Integer) obj).intValue()).isEqualTo(1);
 	}
 
 	@Test
-	public void testComplexGenericMap() {
+	void testComplexGenericMap() {
 		Map<List<String>, List<String>> inputMap = new HashMap<>();
-		List<String> inputKey = new LinkedList<>();
+		List<String> inputKey = new ArrayList<>();
 		inputKey.add("1");
-		List<String> inputValue = new LinkedList<>();
+		List<String> inputValue = new ArrayList<>();
 		inputValue.add("10");
 		inputMap.put(inputKey, inputValue);
 
@@ -391,12 +382,12 @@ public class BeanWrapperGenericsTests {
 		BeanWrapper bw = new BeanWrapperImpl(holder);
 		bw.setPropertyValue("genericMap", inputMap);
 
-		assertThat(holder.getGenericMap().keySet().iterator().next().get(0)).isEqualTo(new Integer(1));
-		assertThat(holder.getGenericMap().values().iterator().next().get(0)).isEqualTo(new Long(10));
+		assertThat(holder.getGenericMap().keySet().iterator().next().get(0)).isEqualTo(1);
+		assertThat(holder.getGenericMap().values().iterator().next().get(0)).isEqualTo(Long.valueOf(10));
 	}
 
 	@Test
-	public void testComplexGenericMapWithCollectionConversion() {
+	void testComplexGenericMapWithCollectionConversion() {
 		Map<Set<String>, Set<String>> inputMap = new HashMap<>();
 		Set<String> inputKey = new HashSet<>();
 		inputKey.add("1");
@@ -408,25 +399,25 @@ public class BeanWrapperGenericsTests {
 		BeanWrapper bw = new BeanWrapperImpl(holder);
 		bw.setPropertyValue("genericMap", inputMap);
 
-		assertThat(holder.getGenericMap().keySet().iterator().next().get(0)).isEqualTo(new Integer(1));
-		assertThat(holder.getGenericMap().values().iterator().next().get(0)).isEqualTo(new Long(10));
+		assertThat(holder.getGenericMap().keySet().iterator().next().get(0)).isEqualTo(1);
+		assertThat(holder.getGenericMap().values().iterator().next().get(0)).isEqualTo(Long.valueOf(10));
 	}
 
 	@Test
-	public void testComplexGenericIndexedMapEntry() {
-		List<String> inputValue = new LinkedList<>();
+	void testComplexGenericIndexedMapEntry() {
+		List<String> inputValue = new ArrayList<>();
 		inputValue.add("10");
 
 		ComplexMapHolder holder = new ComplexMapHolder();
 		BeanWrapper bw = new BeanWrapperImpl(holder);
 		bw.setPropertyValue("genericIndexedMap[1]", inputValue);
 
-		assertThat(holder.getGenericIndexedMap().keySet().iterator().next()).isEqualTo(new Integer(1));
-		assertThat(holder.getGenericIndexedMap().values().iterator().next().get(0)).isEqualTo(new Long(10));
+		assertThat(holder.getGenericIndexedMap().keySet().iterator().next()).isEqualTo(1);
+		assertThat(holder.getGenericIndexedMap().values().iterator().next().get(0)).isEqualTo(Long.valueOf(10));
 	}
 
 	@Test
-	public void testComplexGenericIndexedMapEntryWithCollectionConversion() {
+	void testComplexGenericIndexedMapEntryWithCollectionConversion() {
 		Set<String> inputValue = new HashSet<>();
 		inputValue.add("10");
 
@@ -434,25 +425,25 @@ public class BeanWrapperGenericsTests {
 		BeanWrapper bw = new BeanWrapperImpl(holder);
 		bw.setPropertyValue("genericIndexedMap[1]", inputValue);
 
-		assertThat(holder.getGenericIndexedMap().keySet().iterator().next()).isEqualTo(new Integer(1));
-		assertThat(holder.getGenericIndexedMap().values().iterator().next().get(0)).isEqualTo(new Long(10));
+		assertThat(holder.getGenericIndexedMap().keySet().iterator().next()).isEqualTo(1);
+		assertThat(holder.getGenericIndexedMap().values().iterator().next().get(0)).isEqualTo(Long.valueOf(10));
 	}
 
 	@Test
-	public void testComplexDerivedIndexedMapEntry() {
-		List<String> inputValue = new LinkedList<>();
+	void testComplexDerivedIndexedMapEntry() {
+		List<String> inputValue = new ArrayList<>();
 		inputValue.add("10");
 
 		ComplexMapHolder holder = new ComplexMapHolder();
 		BeanWrapper bw = new BeanWrapperImpl(holder);
 		bw.setPropertyValue("derivedIndexedMap[1]", inputValue);
 
-		assertThat(holder.getDerivedIndexedMap().keySet().iterator().next()).isEqualTo(new Integer(1));
-		assertThat(holder.getDerivedIndexedMap().values().iterator().next().get(0)).isEqualTo(new Long(10));
+		assertThat(holder.getDerivedIndexedMap().keySet().iterator().next()).isEqualTo(1);
+		assertThat(holder.getDerivedIndexedMap().values().iterator().next().get(0)).isEqualTo(Long.valueOf(10));
 	}
 
 	@Test
-	public void testComplexDerivedIndexedMapEntryWithCollectionConversion() {
+	void testComplexDerivedIndexedMapEntryWithCollectionConversion() {
 		Set<String> inputValue = new HashSet<>();
 		inputValue.add("10");
 
@@ -460,50 +451,50 @@ public class BeanWrapperGenericsTests {
 		BeanWrapper bw = new BeanWrapperImpl(holder);
 		bw.setPropertyValue("derivedIndexedMap[1]", inputValue);
 
-		assertThat(holder.getDerivedIndexedMap().keySet().iterator().next()).isEqualTo(new Integer(1));
-		assertThat(holder.getDerivedIndexedMap().values().iterator().next().get(0)).isEqualTo(new Long(10));
+		assertThat(holder.getDerivedIndexedMap().keySet().iterator().next()).isEqualTo(1);
+		assertThat(holder.getDerivedIndexedMap().values().iterator().next().get(0)).isEqualTo(Long.valueOf(10));
 	}
 
 	@Test
-	public void testGenericallyTypedIntegerBean() throws Exception {
+	void testGenericallyTypedIntegerBean() {
 		GenericIntegerBean gb = new GenericIntegerBean();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("genericProperty", "10");
 		bw.setPropertyValue("genericListProperty", new String[] {"20", "30"});
-		assertThat(gb.getGenericProperty()).isEqualTo(new Integer(10));
-		assertThat(gb.getGenericListProperty().get(0)).isEqualTo(new Integer(20));
-		assertThat(gb.getGenericListProperty().get(1)).isEqualTo(new Integer(30));
+		assertThat(gb.getGenericProperty()).isEqualTo(10);
+		assertThat(gb.getGenericListProperty().get(0)).isEqualTo(20);
+		assertThat(gb.getGenericListProperty().get(1)).isEqualTo(30);
 	}
 
 	@Test
-	public void testGenericallyTypedSetOfIntegerBean() throws Exception {
+	void testGenericallyTypedSetOfIntegerBean() {
 		GenericSetOfIntegerBean gb = new GenericSetOfIntegerBean();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("genericProperty", "10");
 		bw.setPropertyValue("genericListProperty", new String[] {"20", "30"});
-		assertThat(gb.getGenericProperty().iterator().next()).isEqualTo(new Integer(10));
-		assertThat(gb.getGenericListProperty().get(0).iterator().next()).isEqualTo(new Integer(20));
-		assertThat(gb.getGenericListProperty().get(1).iterator().next()).isEqualTo(new Integer(30));
+		assertThat(gb.getGenericProperty().iterator().next()).isEqualTo(10);
+		assertThat(gb.getGenericListProperty().get(0).iterator().next()).isEqualTo(20);
+		assertThat(gb.getGenericListProperty().get(1).iterator().next()).isEqualTo(30);
 	}
 
 	@Test
-	public void testSettingGenericPropertyWithReadOnlyInterface() {
+	void testSettingGenericPropertyWithReadOnlyInterface() {
 		Bar bar = new Bar();
 		BeanWrapper bw = new BeanWrapperImpl(bar);
 		bw.setPropertyValue("version", "10");
-		assertThat(bar.getVersion()).isEqualTo(new Double(10.0));
+		assertThat(bar.getVersion()).isEqualTo(Double.valueOf(10.0));
 	}
 
 	@Test
-	public void testSettingLongPropertyWithGenericInterface() {
+	void testSettingLongPropertyWithGenericInterface() {
 		Promotion bean = new Promotion();
 		BeanWrapper bw = new BeanWrapperImpl(bean);
 		bw.setPropertyValue("id", "10");
-		assertThat(bean.getId()).isEqualTo(new Long(10));
+		assertThat(bean.getId()).isEqualTo(Long.valueOf(10));
 	}
 
 	@Test
-	public void testUntypedPropertyWithMapAtRuntime() {
+	void testUntypedPropertyWithMapAtRuntime() {
 		class Holder<D> {
 			private final D data;
 			public Holder(D data) {
